# simple-notepad-project

./: CMakeLists.txt  Notepad.md  find_replace_dialog.cpp  find_replace_dialog.h  find_replace_dialog.ui  main.cpp  main_window.cpp  main_window.h  notepad_exception.h  simple_game_dialog.cpp  simple_game_dialog.h  sort.h  spell_check_text_edit.cpp  spell_check_text_edit.h  spell_checker.cpp  spell_checker.h  spell_checker_highlighter.cpp  spell_checker_highlighter.h  text_transform.h  word_frequency_dialog.cpp  word_frequency_dialog.h  word_frequency_dialog.ui
